Rollback to fixed version (TODO Integration Testing)